Change List: 1 - BUGFIX: Modified selector path for the first layout div below the floating banner to be able to modify the top margin on mobile 2 - New mixin added

--- a/web/themes/custom/abrsd/scss/mixins.scss
+++ b/web/themes/custom/abrsd/scss/mixins.scss
@@ -3,3 +3,9 @@
   background-color: $menu-background !important;
   opacity: 0.9 !important;
 }
+
+@mixin mobile-top-margin-first-layout-div {
+  @include media-breakpoint-down(md) {
+    margin-top: 14rem !important;
+  }
+}
